edited routes and clientUse
