# swagger/swagger.json
@@ -184,11 +184,137 @@
           },
           "date": {
             "type": "string",
-            "example": "11/26/2022, 5:58:15 PM"
+            "example": "11/28/2022, 9:11:32 AM"
           },
           "duration": {
             "type": "string",
-            "example": "11/26/2022, 5:58:15 PM"
+            "example": "11/28/2022, 9:11:32 AM"
+          },
+          "_id": {
+            "type": "string",
+            "example": "507f1f77bcf86cd799439011",
+            "required": true
+          },
+          "__v": {
+            "type": "number",
+            "example": 0
+          }
+        }
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "hooks": {
+            "type": "object"
+          },
+          "base": {
+            "type": "object"
+          },
+          "modelName": {
+            "type": "string"
+          },
+          "model": {
+            "type": "object"
+          },
+          "db": {
+            "type": "object"
+          },
+          "discriminators": {
+            "type": "object"
+          },
+          "events": {
+            "type": "object"
+          },
+          "$appliedMethods": {
+            "type": "boolean"
+          },
+          "$appliedHooks": {
+            "type": "boolean"
+          },
+          "_middleware": {
+            "type": "object"
+          },
+          "$__insertMany": {
+            "type": "object"
+          },
+          "schema": {
+            "type": "object"
+          },
+          "collection": {
+            "type": "object"
+          },
+          "$__collection": {
+            "type": "object"
+          },
+          "Query": {
+            "type": "object"
+          },
+          "$init": {
+            "type": "object"
+          },
+          "$caught": {
+            "type": "boolean"
+          }
+        }
+      },
+      "validate": {
+        "type": "object",
+        "properties": {}
+      },
+      "Clientgoogle": {
+        "type": "object",
+        "properties": {
+          "given_name": {
+            "type": "string",
+            "example": "string"
+          },
+          "userName": {
+            "type": "string",
+            "example": "string"
+          },
+          "email": {
+            "type": "string",
+            "example": "string"
+          },
+          "password": {
+            "type": "string",
+            "example": "string"
+          },
+          "contact": {
+            "type": "number",
+            "example": 0
+          },
+          "employees": {
+            "type": "array"
+          },
+          "servicesOffered": {
+            "type": "array"
+          },
+          "bio": {
+            "type": "string",
+            "example": "string"
+          },
+          "_id": {
+            "type": "string",
+            "example": "507f1f77bcf86cd799439011",
+            "required": true
+          },
+          "__v": {
+            "type": "number",
+            "example": 0
+          }
+        }
+      },
+      "Otpmodel": {
+        "type": "object",
+        "properties": {
+          "OTP": {
+            "type": "string",
+            "example": "string"
+          },
+          "email": {
+            "type": "string",
+            "example": "string"
           },
           "_id": {
             "type": "string",
@@ -221,11 +347,11 @@
           },
           "createdAt": {
             "type": "string",
-            "example": "11/26/2022, 5:58:15 PM"
+            "example": "11/28/2022, 9:11:32 AM"
           },
           "updatedAt": {
             "type": "string",
-            "example": "11/26/2022, 5:58:15 PM"
+            "example": "11/28/2022, 9:11:32 AM"
           },
           "__v": {
             "type": "number",
@@ -242,7 +368,7 @@
           },
           "createdAt": {
             "type": "string",
-            "example": "11/26/2022, 5:58:15 PM"
+            "example": "11/28/2022, 9:11:32 AM"
           },
           "completed": {
             "type": "boolean",
